fix navbar lang z-index

--- a/css/style_index.css
+++ b/css/style_index.css
@@ -235,7 +235,7 @@ display: flex;
   width: max-content;
   max-height: 400px;
   padding: 1rem;
-  z-index: 10;
+  z-index: 99;
   border-radius: 4px;
   box-shadow: rgb(25 19 38 / 10%) 0px 2px 12px -8px, rgb(25 19 38 / 5%) 0px 1px 1px;
   background-color: white;
